# Client_Space

./: CMakeLists.txt  README.md  main.cpp
include/client/: client.h  run_client.h
include/server/: server.h  server_utils.h
src/Client/: client.cpp  runClient.cpp
src/Server/: server.cpp  server_utils.cpp
src/client/: run_client.cpp
ui/ApplicationWindow/: application.cpp  application.h  application.ui
ui/LoginWindow/: login.cpp  login.h  login.ui
ui/RegWindow/: mainwindow.cpp  mainwindow.h  mainwindow.ui
